--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "mongoose": "^5.8.11"
+    "mongoose": "^5.8.11",
+    "request": "^2.88.0",
+    "yup": "^0.28.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.2",
